Update Maven SDK tutorial to SDK 2.1.1.